--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "license": "UNLICENSED",
@@ -56,6 +56,7 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.0",
     "@vinejs/vine": "^3.0.0",
+    "adonis-autoswagger": "^3.72.0",
     "better-sqlite3": "^11.9.1",
     "luxon": "^3.6.1",
     "reflect-metadata": "^0.2.2"
