--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     container_name: pick-to-light-front
     ports:
       - "${FRONT_PORT}:4173"
+    environment:
+      VITE_API_URL: ${VITE_API_URL}
     networks:
       - pick-to-light
     restart: unless-stopped
