--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,14 +2,13 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# Copy package files and install dependencies
 COPY package*.json ./
-RUN npm ci
+RUN npm install
+RUN npm install -g serve
 
-# Copy source code and build
 COPY . .
 RUN npm run build
 
-# Expose port and start
-EXPOSE 4173
-CMD ["npm", "run", "preview", "--", "--port", "4173", "--host"]
+EXPOSE 3000
+
+CMD ["serve", "-s", "dist", "-l", "3000"]
